--- a/package.json
+++ b/package.json
@@ -8,21 +8,18 @@
     "react-dom": "^16.7.0"
   },
   "devDependencies": {
-    "@babel/preset-es2015": "^7.0.0-beta.53",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "cross-env": "^5.0.1",
-    "webpack": "^3.12.0",
-    "webpack-cli": "^3.2.3"
+    "@vitejs/plugin-react": "^2.2.0",
+    "vite": "^3.2.4"
+  },
+  "prettier": {
+    "printwidth": 120,
+    "trailingComma": "none",
+    "semi": false,
+    "singleQuote": true
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
-    "start": "cross-env BABEL_ENV=default webpack --watch"
+    "start": "cross-env BABEL_ENV=default webpack --watch",
+    "build": "vite build"
   }
 }
